Sprint-1 Add a folder for sprint-1 tasks and duplicated the same files for myself in common folder